# SymbAnaFis

./: .gitignore  CHANGELOG.md  Cargo.toml  IMPROVEMENT_PLAN.md  README.md  pyproject.toml
.github/workflows/: manual_benchmark.yml  publish.yml
benches/: BENCHMARK_COMPARISON.md  BENCHMARK_RESULTS.md  CI_Bench_Results.md  OUTPUT_COMPARISON.md  bench_output.txt  benchmark.rs  python_benchmark_normal.py  symbolica_bench.rs  sympy_bench.py
benches/rust/: benchmark.rs  benchmark_parallel.rs  benchmark_symbolica.rs  expressions.rs  large_expr.rs
docs/: API_REFERENCE.md  ARCHITECTURE.md  ROADMAP.md
examples/: README.md  api_showcase.py  api_showcase.rs  applications.rs  basics.rs  diff_comparison.rs  differentiation.rs  domain_safety.rs  dual_autodiff.rs  features.rs  instruction_dump.rs  profile_pipeline.rs  simplification.rs
python/symb_anafis/: __init__.py  __init__.pyi
scripts/: format_benchmarks.py
src/: ast.rs  builder.rs  differentiation.rs  display.rs  error.rs  helpers.rs  lib.rs  parallel.rs  python.rs  symbol.rs  traits.rs  uncertainty.rs  visitor.rs
src/api/: builder.rs  helpers.rs  mod.rs
src/bindings/: eval_f64.rs  mod.rs  parallel.rs  python.rs
src/core/: display.rs  error.rs  evaluator.rs  expr.rs  known_symbols.rs  mod.rs  poly.rs  symbol.rs  traits.rs  unified_context.rs  visitor.rs
src/diff/: engine.rs  mod.rs
src/evaluator/: compiler.rs  execution.rs  instruction.rs  mod.rs  simd.rs  tests.rs
src/functions/: definitions.rs  mod.rs  registry.rs
src/math/: dual.rs  mod.rs  robustness_tests.rs
src/parser/: implicit_mul.rs  lexer.rs  mod.rs  pratt.rs  tokens.rs
src/simplification/: README.md  engine.rs  helpers.rs  mod.rs
src/tests/: actual_division_bug.rs  advanced_simplification_tests.rs  advanced_tests.rs  api_contract_tests.rs  benchmark_tests.rs  closure_check.rs  comprehensive_api_tests.rs  custom_functions.rs  debug_applications.rs  debug_div_hang.rs  debug_division_structure.rs  debug_factoring_logic.rs  debug_gaussian_cycle.rs  debug_issue.rs  debug_rc.rs  debug_root.rs  debug_root_issue.rs  mod.rs  (+41 more)
(+35 files in other folders)
