[package]
name = "symb_anafis"
version = "0.3.1"
edition = "2024"
authors = ["CokieMiner"]
description = "Fast symbolic differentiation library for Rust"
license = "MIT"
repository = "https://github.com/CokieMiner/SymbAnaFis"
keywords = [
    "symbolic",
    "differentiation",
    "calculus",
    "mathematics",
    "derivatives",
]
categories = ["mathematics", "science"]

[lib]
name = "symb_anafis"
crate-type = ["rlib", "cdylib"]

[dependencies]
num-traits = "0.2.19"
pyo3 = { version = "0.27.2", features = ["extension-module"], optional = true }
rayon = { version = "1.11.0", optional = true }

[dev-dependencies]
criterion = "0.8.1"
symbolica = "1.2.1"
quickcheck = "1.0.3"
dotenvy = "0.15"

[features]
default = []
python = ["pyo3"]
parallel = ["rayon"]

[profile.release]
debug = true

[[bench]]
name = "benchmark"
harness = false
path = "benches/rust/benchmark.rs"

[[bench]]
name = "symbolica_bench"
harness = false
path = "benches/rust/symbolica_bench.rs"

[[bench]]
name = "eval_comparison"
harness = false
path = "benches/rust/eval_comparison.rs"

[[bench]]
name = "large_expr"
harness = false
path = "benches/rust/large_expr.rs"
